사용자 현행화 기능 추가